--- a/videotest2.vcxproj.filters
+++ b/videotest2.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="DisplayFrame.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectViewDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="videotest2.cpp">
@@ -87,6 +90,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CvvImage.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectViewDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
