1.将摘要视频保存路径更改为工程文件夹下 2.生成摘要时首先判断摘要视频是否存在。如存在提示是否重新生成。 3.生成摘要时player2停止播放。

--- a/videotest2.vcxproj.filters
+++ b/videotest2.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="ChangeIniFileDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ifRebuildDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="videotest2.cpp">
@@ -99,6 +102,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CvvImage.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ifRebuildDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
