--- a/videotest2.vcxproj
+++ b/videotest2.vcxproj
@@ -21,7 +21,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -109,6 +109,7 @@
     <ClInclude Include="CvvImage.h" />
     <ClInclude Include="DisplayFrame.h" />
     <ClInclude Include="GlobalFunctions.h" />
+    <ClInclude Include="ifRebuildDlg.h" />
     <ClInclude Include="LibMySql.h" />
     <ClInclude Include="ObjectViewDlg.h" />
     <ClInclude Include="publicheader.h" />
@@ -125,6 +126,7 @@
     <ClCompile Include="CvvImage.cpp" />
     <ClCompile Include="DisplayFrame.cpp" />
     <ClCompile Include="GlobalFunctions.cpp" />
+    <ClCompile Include="ifRebuildDlg.cpp" />
     <ClCompile Include="LibMySql.cpp" />
     <ClCompile Include="ObjectViewDlg.cpp" />
     <ClCompile Include="stdafx.cpp" />
