--- a/videotest/videotest2/videotest2.vcxproj
+++ b/videotest/videotest2/videotest2.vcxproj
@@ -21,15 +21,15 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
-    <PlatformToolset>v100</PlatformToolset>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -76,17 +76,20 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>Create</PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>..\PublicHeader;..\PublicHeader\opencv2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>..\PublicHeader\Lib;..\PublicHeader\Lib\mysql;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SkinPPWTL.lib;libmysql.lib;opencv_core244.lib;opencv_contrib244.lib;opencv_photo244.lib;opencv_videostab244.lib;opencv_nonfree244.lib;opencv_highgui244.lib;opencv_imgproc244.lib;opencv_objdetect244.lib;opencv_video244.lib;opencv_calib3d244.lib;opencv_features2d244.lib;opencv_flann244.lib;opencv_legacy244.lib;opencv_ts244.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -129,14 +132,14 @@
     <ClInclude Include="ButtonBeautify.h" />
     <ClInclude Include="ChangeIniFileDlg.h" />
     <ClInclude Include="CvvImage.h" />
-    <ClInclude Include="Dialog1.h" />
+    <ClInclude Include="VideoAbsSUBDlg.h" />
     <ClInclude Include="DisplayFrame.h" />
-    <ClInclude Include="drawDetection.h" />
+    <ClInclude Include="DrawDetectionSUBDlg.h" />
     <ClInclude Include="GlobalFunctions.h" />
     <ClInclude Include="ifRebuildDlg.h" />
     <ClInclude Include="LibMySql.h" />
-    <ClInclude Include="ObjectViewDlg.h" />
-    <ClInclude Include="picsum.h" />
+    <ClInclude Include="ObjectViewSUBDlg.h" />
+    <ClInclude Include="PictureAbsSUBDlg.h" />
     <ClInclude Include="publicheader.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -153,14 +156,14 @@
     <ClCompile Include="ButtonBeautify.cpp" />
     <ClCompile Include="ChangeIniFileDlg.cpp" />
     <ClCompile Include="CvvImage.cpp" />
-    <ClCompile Include="Dialog1.cpp" />
+    <ClCompile Include="VideoAbsSUBDlg.cpp" />
     <ClCompile Include="DisplayFrame.cpp" />
-    <ClCompile Include="drawDetection.cpp" />
+    <ClCompile Include="DrawDetectionSUBDlg.cpp" />
     <ClCompile Include="GlobalFunctions.cpp" />
     <ClCompile Include="ifRebuildDlg.cpp" />
     <ClCompile Include="LibMySql.cpp" />
-    <ClCompile Include="ObjectViewDlg.cpp" />
-    <ClCompile Include="picsum.cpp" />
+    <ClCompile Include="ObjectViewSUBDlg.cpp" />
+    <ClCompile Include="PictureAbsSUBDlg.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="UIbeautify.cpp" />
     <ClCompile Include="VideoSeg.cpp" />
