修改gitnore, 删除不需要提交的文件夹

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 *.dll
 *.aps
 *.opensdf
+
+/VideoTestForAndroid/obj/
+/VideoTestForAndroid/bin/
+/VideoTestForAndroid/gen/
+/VideoTestForAndroid/libs/
