--- a/IntrusionDetectLib/IntrusionDetectLib/IntrusionDetectLib.vcxproj
+++ b/IntrusionDetectLib/IntrusionDetectLib/IntrusionDetectLib.vcxproj
@@ -55,16 +55,16 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;INTRUSIONDETECTLIB_EXPORTS;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;INTRUSIONDETECTLIB_EXPORTS;_CRT_SECURE_NO_DEPRECATE;_XKEYCHECK_H;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>./jsonlib/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./jsonlib/include;../include/h264;</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>./jsonlib/lib/debug</AdditionalLibraryDirectories>
-      <AdditionalDependencies>lib_json.lib;opencv_calib3d2410d.lib;opencv_contrib2410d.lib;opencv_core2410d.lib;opencv_features2d2410d.lib;opencv_flann2410d.lib;opencv_gpu2410d.lib;opencv_highgui2410d.lib;opencv_imgproc2410d.lib;opencv_legacy2410d.lib;opencv_ml2410d.lib;opencv_objdetect2410d.lib;opencv_ts2410d.lib;opencv_video2410d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>./jsonlib/lib/debug;../lib/</AdditionalLibraryDirectories>
+      <AdditionalDependencies>h264.lib;lib_json.lib;opencv_calib3d2410d.lib;opencv_contrib2410d.lib;opencv_core2410d.lib;opencv_features2d2410d.lib;opencv_flann2410d.lib;opencv_gpu2410d.lib;opencv_highgui2410d.lib;opencv_imgproc2410d.lib;opencv_legacy2410d.lib;opencv_ml2410d.lib;opencv_objdetect2410d.lib;opencv_ts2410d.lib;opencv_video2410d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -88,6 +88,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="264decoder.h" />
     <ClInclude Include="areaDetect.h" />
     <ClInclude Include="DirectionDetect.h" />
     <ClInclude Include="interface_server.h" />
@@ -95,6 +96,7 @@
     <ClInclude Include="videoProcess.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="264decoder.cpp" />
     <ClCompile Include="areaDetect.cpp" />
     <ClCompile Include="DirectionDetect.cpp" />
     <ClCompile Include="interface_server.cpp" />
