--- a/VideoTestForAndroid/AndroidManifest.xml
+++ b/VideoTestForAndroid/AndroidManifest.xml
@@ -24,14 +24,15 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".MainInterfaceActivity"
+            android:label="@string/app_name"
+            android:hardwareAccelerated="false" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name="AutoDetectionServer"></service>
     </application>
-
 </manifest>
