增加写日志文件部分

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /VideoTestForAndroid/bin/
 /VideoTestForAndroid/gen/
 /VideoTestForAndroid/libs/
+/VideoTestForAndroid/project.properties
 *.project
 *.cproject
 
