整理代码；删除无用类；service开机启动

--- a/VideoTestForAndroid/AndroidManifest.xml
+++ b/VideoTestForAndroid/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission> 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -33,6 +33,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="AutoDetectionServer"></service>
+        <service android:name=".AutoDetectionServer">
+            <intent-filter>  
+        		<action android:name="android.intent.action.MAIN" />  
+        		<category android:name="android.intent.category.LAUNCHER" />  
+    		</intent-filter>  
+    	</service>
+    	<receiver android:name=".BootCompleteReceiver">
+    		<intent-filter>  
+        		<action android:name="android.intent.action.BOOT_COMPLETED" />  
+        		<category android:name="android.intent.category.HOME" />  
+    		</intent-filter>
+		</receiver>
     </application>
 </manifest>
